--- a/css/header.css
+++ b/css/header.css
@@ -1,3 +1,10 @@
+header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 header nav {
     width: 100%;
     height: auto;
